fdo#57362 Cannot save document after editing footer background and border

In HeaderFooterWin.cxx's SwHeaderFooterWin::ExecuteCommand(): after changes are made to the header's background, box, or shadow, I call SetModified(true) to signal that the document was modified.

Change-Id: I2be5710dde9d7a6f5d4373484d52ece71c91cdd4